<resources>
    <string name="app_name" translatable="false">MediMate</string>
    <string name="title_home">Accueil</string>
    <string name="title_dashboard">Mes tâches</string>
    <string name="title_notifications">Conseils</string>
    <string name="title_profil">Profil</string>
    <string name="chargement">Chargement des données…</string>
    <string name="chargement_scan">Lecture de l\'ordonnance…</string>
    <string name="médi_title">Mes tâches</string>
    <string name="retour">Retour</string>
    <string name="find_medic">Chercher le nom d’un médicament</string>
    <string name="modifier">Modifier</string>
    <string name="details">Détails</string>
    <string name="add_a_task_to_do">Ajouter une tâche à faire</string>
    <string name="back_today">Retour aujourd\'hui</string>
    <string name="bienvenue_sur_medi_mate">Bienvenue sur MediMate !</string>
    <string name="creer_mon_compte">Créer mon compte</string>
    <string name="medimatemate">MediMate est une application incroyable réalisée par des étudiants en 3ème année de BUT Informatique à l\'IUT de Nantes !</string>
    <string name="sexe">Sexe</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="date_naissance">Date de naissance</string>
    <string name="poids">Poids (en kg)</string>
    <string name="taille">Taille (en cm)</string>
    <string name="suivant">Suivant</string>
    <string name="soucis">Soucis de santé en cours</string>
    <string name="regime">Régime alimentaire</string>
    <string name="allergies">Allergies</string>
    <string name="informations_du_medicament">Informations du médicament</string>
    <string name="nom_du_medicament">Nom du médicament</string>
    <string name="dosage_du_medicament">Dosage du médicament</string>
    <string name="forme_pharamaceutique">Forme pharamaceutique</string>
    <string name="frequence_de_prise">Fréquence de prise</string>
    <string name="heure_fixe_jour">Une ou plusieurs fois par jours</string>
    <string name="prise_unique">Prise unique</string>
    <string name="plus_d_options">Plus d\'options</string>
    <string name="pitite_image_de_calendrier">Pitite image de calendrier</string>
    <string name="pitite_image_de_medicament">pitite image de medicament</string>
    <string name="quand_voulez_vous_recevoir_des_rappels">Quand voulez-vous recevoir des rappels ?</string>
    <string name="heure_de_prise_et_dosage">Heure de prise et dosage</string>
    <string name="heure">Heure</string>
    <string name="fleche">fleche</string>
    <string name="nombre_de_doses">Nombre de doses</string>
    <string name="bonjour">Bonjour,</string>
    <string name="infos">Vos informations</string>
    <string name="stats">Vos statistiques</string>
    <string name="params">Paramètres</string>
    <string name="contact_us">Nous contacter</string>
    <string name="legal_notice">Mentions légal</string>
    <string name="credits">Crédits</string>
    <string name="select_account">Selectionnez votre compte</string>
    <string name="ans">ans</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="se_d_connecter">Se déconnecter</string>
    <string name="medi_searchbar">Chercher le nom d’un médicament</string>
    <string name="check_fields">Veuillez vérifier les champs saisis.</string>
    <string name="fill_fields">Veuillez remplir les champs.</string>
    <string name="error_medicine_not_found">Erreur, médicament introuvable</string>
    <string name="error">erreur</string>
    <string name="intervalle">Intervalle</string>
    <string name="multi_per_day">Plusieurs fois par jours</string>
    <string name="specifique_day">Jours spécifiques dans la semaine</string>
    <string name="cycle">Cycle</string>
    <string name="ex_intervalle">ex: une fois tous les deux jours, un fois toutes les 6 heures, …</string>
    <string name="ex_multi_per_day">ex: 3 fois par jours, 2 fois par jour, …</string>
    <string name="ex_specifique_day">ex: lundi, mardi et jeudi</string>
    <string name="ex_cycle">ex: 21 jours de prise, 7 jours de pause</string>
    <string name="every_hour">Toutes les heures</string>
    <string name="every_day">Tous les jours</string>
    <string name="delete_account">Supprimer mon compte</string>
    <string name="jaccepte_les">J\'accepte les </string>
    <string name="conditions_generales_dutilisation">conditions générales d\'utilisation</string>
    <string name="politique_de_confidentialite">politique de confidentialité</string>
    <string name="jaccepte_la">J\'accepte la </string>
    <string name="string_conditions">Pour utiliser l\'application MediMate, vous devez accepter les conditions générales d\'utilisation et la politique de confidentialité de l\'application.</string>
    <string name="titreCGU">Conditions générales d\'utilisation</string>
    <string name="rappel_tous_les">rappel tous les</string>
    <string name="rappel_toutes_les">rappel toutes les</string>
    <string name="heures">Heures</string>
    <string name="jours">Jours</string>
    <string name="email">Email</string>
    <string name="titrePC">Politique de confidentialité</string>
    <string name="rappels_heures_fixes">Rappels à heures fixes</string>
    <string name="ajouter_tache">Ajouter une tâche</string>
    <string name="dosage">Dosage</string>
    <string name="need_to_add_taking_in_list">"Veuillez ajouter au moins une heure de prise"</string>
    <string name="acceder_votre_messagerie">Accéder à votre messagerie</string>
    <string name="activer_la_localisation">Activer la localisation</string>
    <string name="lier_la_biometrie">Lier la biométrie \n à mon compte</string>
    <string name="recapitulatif_de_votre_tache">Récapitulatif de votre tâche</string>
    <string name="valider">Valider</string>
    <string name="date_prochaine_prise">Date prochaine prise :</string>
    <string name="cree_le">Crée le :</string>
    <string name="informations_nsur_la_prise">Informations sur la prise</string>
    <string name="stockage_mediacament">Stockage du médicament</string>
    <string name="stockage_du_medicament">Stockage du médicament</string>
    <string name="stockage_actuel">Stockage actuel :</string>
    <string name="alerte_stockage">Valeur d\'alerte :</string>
    <string name="definissez_une_valeur_en_dessous_de_laquelle_vous_serez_alert">Définissez une valeur en dessous de laquelle vous serez alerté.</string>
    <string name="definissez_votre_stockage_actuel">Définissez votre stockage actuel.</string>
    <string name="combien_de_doses">Combien de doses ?</string>
    <string name="weight_sup_a_0">Le dosage doit être supérieur à 0</string>
    <string name="takes_cycle">prise en cycle</string>
    <string name="nb_jours_prises">Durée du traitement</string>
    <string name="nb_jours_repos">Durée du repos</string>
    <string name="date_commence_traitement">Date de début du traitement</string>
    <string name="cycle_duration_too_short">La durée du cycle doit être supérieure à 0</string>
    <string name="rappel_jour_cycle">Rappel à chaque jours actifs du cycle</string>
    <string name="gerer_le_stockage">Gérer le stockage</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="faire_pause_entre">Faire une pause entre</string>
    <string name="et">et</string>
    <string name="stock">Stock :</string>
    <string name="no_stock">Non</string>
    <string name="text_choose_medicament">Sélectionnez les médicaments que vous souhaitez ajouter :</string>
    <string name="connexion_echouee">La connexion avec la base de données a échouée</string>
    <string name="maj_donnees">Mise à jour des données</string>
    <string name="date_fin_traitement">Date de fin de traitement</string>
    <string name="channel_name_reminder">Rappel des médicaments</string>
    <string name="channel_description_reminder">notifications rappel pour prendre vous médicaments</string>
    <string name="notification_message">Il est l\'heure de prendre votre médicament</string>
    <string name="pris">pris</string>
    <string name="delete_task">Supprimer la tâche</string>
    <string name="deleted">Supprimé</string>
    <string name="doses" translatable="false">" doses"</string>
    <string name="create_pin">Création du code PIN</string>
    <string name="aucun_medecin_enregistre">Aucun médecin</string>
    <string name="cliquez_sur_le_crayon">Cliquez sur le crayon</string>
    <string name="pour_ajouter_un_medecin">pour ajouter un médecin</string>
    <string name="modifier_votre_medecin">Modifier votre médecin</string>
    <string name="nom_du_medecin">Nom du médecin</string>
    <string name="numero_du_medecin">Numéro du médecin</string>
    <string name="mail_du_medecin">Mail du médecin</string>
    <string name="pharmacies_les_plus_proches">Pharmacies les plus proches</string>
    <string name="declar_un_effet_indesirable">Déclarer un effet indésirable</string>
    <string name="contacter_votre_medecin">Contacter votre médecin</string>
    <string name="effet_indesirable">Effet indésirable</string>
    <string name="envoyer_un_sms">Envoyer un SMS</string>
    <string name="envoyer_un_mail">Envoyer un mail</string>
    <string name="bravo_vous_tes_r_gulier">Bravo ! Vous êtes régulier !</string>
    <string name="des_efforts_sont_faire">Des efforts sont à faire</string>
    <string name="vous_avez_pris">Vous avez pris : </string>
    <string name="erreur_prise_photo">Erreur lors de la prise de photo</string>
    <string name="aucun_medicament_trouve">Aucun médicament trouvé</string>
    <string name="elements_selectionnes">%s éléments sélectionnés</string>
    <string name="authentification_requise">Authentification requise</string>
    <string name="authentifier_acceder_l_application">Veuillez vous authentifier pour accéder à l\'application</string>
    <string name="code_pin_incorrect">Code pin incorrect</string>
    <string name="rien_prendre_aujourd_hui">Rien à prendre aujourd\'hui !</string>
    <string name="vous_avez_pris_medicaments_aujourd_hui">Vous avez pris %s médicaments aujourd\'hui !</string>
    <string name="erreur_ouverture_sms">Erreur lors de l\'ouverture des SMS</string>
    <string name="aucun_numero_telephone">Aucun numéro de téléphone</string>
    <string name="erreur_lors_de_ouverture_mails">Erreur lors de l\'ouverture des mails</string>
    <string name="aucune_adresse_mail">Aucune adresse mail</string>
    <string name="permission_refusee">Permission refusée</string>
    <string name="a_heures">A %s heures</string>
    <string name="dans">"Dans "</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="il_y_a_minute">Il y a %s minute</string>
    <string name="annuler_la_prise">Annuler la prise</string>
    <string name="annuler">Annuler</string>
    <string name="il_y_a_minutes">Il y a %s minutes</string>
    <string name="il_y_a_heure">Il y a %s heure</string>
    <string name="il_y_a_heures">Il y a %s heures</string>
    <string name="scanner_une_ordonnance">Scanner une ordonnance</string>
    <string name="entrez_votre_code_pin">Entrez votre code PIN</string>
    <string name="renseignez_vos">Renseignez vos …</string>
    <string name="nom_m_dicament">Nom médicament</string>
    <string name="type" translatable="false">Type</string>
    <string name="type_de_prise">Type de prise</string>
    <string name="derni_re_modification_le">Dernière modification le :</string>
    <string name="date">date</string>
    <string name="confirmer">Confirmer</string>
    <string name="duplication_substance_active">Duplication de substance active détecté</string>
    <string name="ajouter_medecin">Ajouter un nouveau médecin</string>
    <string name="search">Rechercher</string>
    <string name="m_decins_d_tect_s">Médecins détectés</string>
    <string name="m_dicaments_d_tect_s">Médicaments détectés</string>
</resources>