<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ConseilsFragment">


        <TextView
            android:id="@+id/titre_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacter_votre_medecin"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.146"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.03" />

        <Button
            android:id="@+id/ajout_medecin"
            style="@style/CustomButtonStyle3"
            android:layout_width="251dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/ajouter_medecin"
            android:textAllCaps="false"
            android:textColor="@color/clickable_blue"
            app:layout_constraintStart_toStartOf="@+id/titre_contact"
            app:layout_constraintTop_toBottomOf="@+id/list_medecins" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_medecins"
            android:layout_marginTop="20dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titre_contact" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/effet_indesirable"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/titre_contact"
            app:layout_constraintTop_toBottomOf="@+id/ajout_medecin" />

        <Button
            android:id="@+id/effet_indesirable"
            style="@style/CustomButtonStyle3"
            android:layout_width="251dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:text="@string/declar_un_effet_indesirable"
            android:textAllCaps="false"
            android:textColor="@color/clickable_blue"
            app:layout_constraintStart_toStartOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

</androidx.constraintlayout.widget.ConstraintLayout>
