<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/title_active_substance"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginTop="16dp"
        android:text="@string/duplication_substance_active"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_active_substance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Le médicament que vous essayez d'ajouter présente une substance active déjà présente dans vos traitements en cours"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="@+id/title_active_substance"
        app:layout_constraintTop_toBottomOf="@+id/title_active_substance" />

    <TextView
        android:id="@+id/titre_confirm_active_substance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Souhaitez-vous l'ajouter quand même ?"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_confirm_active_sub"
        app:layout_constraintStart_toStartOf="@+id/btn_cancel_active_sub"
        app:layout_constraintTop_toBottomOf="@+id/text_active_substance" />

    <Button
        android:id="@+id/btn_cancel_active_sub"
        style="@style/CustomButtonStyle3"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/annuler"
        android:textAllCaps="false"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btn_confirm_active_sub"
        style="@style/CustomButtonStyle3"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/confirmer"
        android:textAllCaps="false"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>